add media queries for desktop layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div class="card__image">
           <img class="woman-desktop-mobile" src="./src/assets/images/illustration-woman-online-mobile.svg" alt="woman online desktop">
           <img class="svg-shadow" src="./src/assets/images/bg-pattern-mobile.svg" alt="">
-          <!-- <img src="./src/assets/images/illustration-woman-online-desktop.svg" alt="woman online desktop"> -->
+          <img class="svg-box" src="./src/assets/images/illustration-box-desktop.svg" alt="">
+
         </div>
         <div class="card__text">
           <h1 class="title">FAQ</h1>
