--- a/index.html
+++ b/index.html
@@ -11,90 +11,95 @@
       sizes="32x32"
       href="./src/assets/images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./src/styles/reset.css">
+    <link rel="stylesheet" href="./src/styles/reset.css" />
     <link rel="stylesheet" href="./src/styles/style.css" />
 
     <title>Frontend Mentor | FAQ Accordion Card</title>
   </head>
   <body>
-    <div class="container">
-      <section class="card">
-        <div class="card__image">
-          <img class="woman-desktop-mobile" src="./src/assets/images/illustration-woman-online-mobile.svg" alt="woman online desktop">
-          <img class="svg-shadow" src="./src/assets/images/bg-pattern-mobile.svg" alt="">
-          <img class="svg-box" src="./src/assets/images/illustration-box-desktop.svg" alt="">
+    <section class="card">
+      <div class="card__image">
+        <img
+          class="woman-desktop-mobile"
+          src="./src/assets/images/illustration-woman-online-mobile.svg"
+          alt="woman online desktop"
+        />
+        <img class="svg-shadow" src="./src/assets/images/bg-pattern-mobile.svg" alt="" />
+        <img
+          class="svg-box"
+          src="./src/assets/images/illustration-box-desktop.svg"
+          alt=""
+        />
+      </div>
+      <div class="card__text">
+        <h1 class="title">FAQ</h1>
 
-        </div>
-        <div class="card__text">
-          <h1 class="title">FAQ</h1>
+        <div class="accordion">
+          <div class="accordion__item">
+            <button class="accordion__question">
+              How many team members can I invite?
+            </button>
 
-          <div class="accordion">
-            <div class="accordion__item">
-
-              <button class="accordion__question">
-                How many team members can I invite?
-              </button>
-
-              <div class="accordion__content">
-                <p>You can invite up to 2 additional users on the
-                  Free plan. There is no limit on team members for the Premium plan.</p>
-                </div>
-              </div>
-            <div class="accordion__item">
-
-                <button class="accordion__question">
-                  What is the maximum file upload size?
-                  </button>
-
-              <div class="accordion__content">
-                <p>No more than 2GB. All files in your account must fit your allotted
-                    storage space.</p>
-              </div>
+            <div class="accordion__content">
+              <p>
+                You can invite up to 2 additional users on the Free plan. There is no
+                limit on team members for the Premium plan.
+              </p>
             </div>
-            <div class="accordion__item">
+          </div>
+          <div class="accordion__item">
+            <button class="accordion__question">
+              What is the maximum file upload size?
+            </button>
 
-                <button class="accordion__question">
-                  How do I reset my password?
-                </button>
-
-              <div class="accordion__content">
-                <p>Click “Forgot password” from the login page
-                    or “Change password” from your profile page. A reset link will be emailed to you.</p>
-              </div>
+            <div class="accordion__content">
+              <p>
+                No more than 2GB. All files in your account must fit your allotted storage
+                space.
+              </p>
             </div>
-            <div class="accordion__item">
+          </div>
+          <div class="accordion__item">
+            <button class="accordion__question">How do I reset my password?</button>
 
-                <button class="accordion__question">
-                  Can I cancel my subscription?
-                  </button>
-
-              <div class="accordion__content">
-                <p>Yes! Send us a message and we’ll process your request no
-                    questions asked.</p>
-              </div>
+            <div class="accordion__content">
+              <p>
+                Click “Forgot password” from the login page or “Change password” from your
+                profile page. A reset link will be emailed to you.
+              </p>
             </div>
-            <div class="accordion__item">
+          </div>
+          <div class="accordion__item">
+            <button class="accordion__question">Can I cancel my subscription?</button>
 
-                <button class="accordion__question">
-                  Do you provide additional support?
-                </button>
+            <div class="accordion__content">
+              <p>
+                Yes! Send us a message and we’ll process your request no questions asked.
+              </p>
+            </div>
+          </div>
+          <div class="accordion__item">
+            <button class="accordion__question">
+              Do you provide additional support?
+            </button>
 
-              <div class="accordion__content">
-                <p>Chat and email support is
-                    available 24/7. Phone lines are open during normal business hours.</p>
-              </div>
+            <div class="accordion__content">
+              <p>
+                Chat and email support is available 24/7. Phone lines are open during
+                normal business hours.
+              </p>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <!-- <div class="attribution">
+    <!-- <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Your Name Here</a>. -->
-      </div>
-    </div>
+
     <script src="./src/scripts/script.js"></script>
   </body>
 </html>
