update semantic html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <title>Frontend Mentor | FAQ Accordion Card</title>
   </head>
   <body>
-    <section class="card">
-      <div class="card__image">
+    <main class="card">
+      <section class="card__image">
         <img
           class="woman-desktop-mobile"
           src="./src/assets/images/illustration-woman-online-mobile.svg"
@@ -30,8 +30,8 @@
           src="./src/assets/images/illustration-box-desktop.svg"
           alt=""
         />
-      </div>
-      <div class="card__text">
+      </section>
+      <section class="card__text">
         <h1 class="title">FAQ</h1>
 
         <div class="accordion">
@@ -91,8 +91,8 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <!-- <div class="attribution">
         Challenge by
